--- a/clients/web/AutoServiceTracking.Web.Dashboard/Views/Home/Index.cshtml
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/Views/Home/Index.cshtml
@@ -1,3 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Ana Sayfa";
+}
+
+<center>
+    <h1>Araç Servis Takip Paneline Hoşgeldiniz :)</h1>
+</center>
+<br />
+
+<p>Bu panel aracılığıyla servis geçmişi görüntüleyip aynı zamanda ekleyebilirsiniz.</p>
+
+@section Styles {
+   
 }
