--- a/clients/web/AutoServiceTracking.Web.Dashboard/Views/Shared/_Layout.cshtml
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
             <ul class="sidebar-menu">
                 <li><a href="/Home/Index">Ana Sayfa</a></li>
                 <li><a href="/ServiceEntry/CreateServiceEntry">Servis Girişi</a></li>
-                <li><a href="/ServiceEntry/Index">Servis Geçmişi</a></li>
+                <li><a href="/ServiceEntry/Index">Servis Tablosu</a></li>
             </ul>
         </nav>
 
