--- a/clients/web/AutoServiceTracking.Web.Dashboard/Views/ServiceEntry/CreateServiceEntry.cshtml
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/Views/ServiceEntry/CreateServiceEntry.cshtml
@@ -61,8 +61,8 @@
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(x => x.ServiceCity, "Servis Hizmeti Alınan Şehir", new { @class = "control-label"})
-                            @Html.EditorFor(x => x.ServiceCity, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.LabelFor(x => x.ServiceCity, "Servis Şehri", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.DropDownListFor(x => x.ServiceCity, (IEnumerable<SelectListItem>)ViewBag.CityDropDownList, "Seçiniz", new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.ServiceCity, "", new { @class = "text-danger" })
                         </div>
 
