--- a/clients/web/AutoServiceTracking.Web.Dashboard/Views/Shared/_Layout.cshtml
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <div class="sidebar-header">
-                <h1>AST</h1>
+                <h1>SK Tracking</h1>
             </div>
             <ul class="sidebar-menu">
                 <li><a href="/Home/Index">Ana Sayfa</a></li>
@@ -142,7 +142,15 @@
 
             <!-- Footer -->
             <footer class="footer">
-               <p>&copy; 2024 Araç Servis Takibi. Tüm hakları saklıdır.</p>
+                <div style="text-align: center; margin: 10px;">
+                    <span style="font-size: larger;">🫠</span>
+                    <a href="https://www.linkedin.com/in/serhat-kacmaz/" style="margin: 0 10px;">LinkedIn</a>
+                    <span style="font-size: larger;">🫠</span>
+                    <a href="https://medium.com/@@serhatkacmaz" style="margin: 0 10px;">Medium</a>
+                    <span style="font-size: larger;">🫠</span>
+                    <a href="https://github.com/serhatkacmaz" style="margin: 0 10px;">GitHub</a>
+                    <span style="font-size: larger;">🫠</span>
+                </div>
             </footer>
         </div>
     </div>
