--- a/clients/web/AutoServiceTracking.Web.Dashboard/Views/Home/Index.cshtml
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/Views/Home/Index.cshtml
@@ -2,13 +2,46 @@
     ViewData["Title"] = "Ana Sayfa";
 }
 
-<center>
-    <h1>Araç Servis Takip Paneline Hoşgeldiniz :)</h1>
-</center>
+@section Styles{
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .tech-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+            .tech-list li {
+                padding: 10px;
+                margin: 5px 0;
+                background-color: #f5f5f5;
+                border-radius: 5px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            }
+
+                .tech-list li p {
+                    margin: 0;
+                }
+    </style>
+}
+
+<div style="text-align: center; margin-top: 20px;">
+    <h1>Araç Servis Takip Paneline Hoşgeldiniz <span style="font-size: larger;">😊</span></h1>
+</div>
 <br />
 
-<p>Bu panel aracılığıyla servis geçmişi görüntüleyip aynı zamanda ekleyebilirsiniz.</p>
+<h4>Kullanılan Teknoloji</h4>
+<ul class="tech-list">
+    <li><p>Database -> MsSQL Server</p></li>
+    <li><p>Backend -> .Net 7 Web API</p></li>
+    <li><p>Frontend -> .Net 7 Web MVC - Bootstrap</p></li>
+    <li><p>Security -> JWT - SHA1 Encryption - XSS </p></li>
+    <li><p>Patterns -> Repository - Unit Of Work</p></li>
+    <li><p>ORM - EF Core - Auditing - Code First</p></li>
+    <li><p>AutoMapper - FluentValidation - Global Exception Handler - Custom Middlewares</p></li>
+</ul>
 
-@section Styles {
-   
-}
+<br />
